name:                mustache-test
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/msrdic/mustache-test#readme
license:             BSD3
license-file:        LICENSE
author:              Mladen Srdic
maintainer:          m.s.qubits@gmail.com
copyright:           2020 Mladen Srdic
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable mustache-test
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mustache
                     , text
